fix(gtk): fix alignment issues with nautilus sidebar

--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -4161,13 +4161,7 @@ placessidebar {
       border-radius: 0; }
       placessidebar row.sidebar-row label {
         color: #B6B7B9;
-        padding-left: 8px; }
-      placessidebar row.sidebar-row.sidebar-row .sidebar-icon {
-        margin-left: -14px;
-        margin-right: 12px;
-        padding-left: 14px;
-        padding-right: 12px;
-        color: #B6B7B9; }
+        padding-left: 30px; }
       placessidebar row.sidebar-row:hover {
         transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
         background-color: transparent;
