--- a/gtk-4.0/widgets/_sidebar.scss
+++ b/gtk-4.0/widgets/_sidebar.scss
@@ -132,17 +132,9 @@ placessidebar {
 
         label { 
           color: $fg_color; 
-          padding-left: 8px;
+          padding-left: 30px;
         }
-				&.sidebar-row{
-					.sidebar-icon {
-						margin-left:-14px;
-						margin-right: 12px;
-						padding-left: 14px;
-						padding-right: 12px;
-						color: $fg_color;
-					}
-				}
+
 				&:hover{
 					transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
 					background-color: transparent; /*rgba(65,67,75,0.4); */
